--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,67 @@
 * {
-    border: 0;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 62.5%;
-    box-sizing: border-box;
 }
 
 body {
-    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 900px;
     margin: 0 auto;
-    display: block;
+    background-color: lightblue; /* Adicione esta linha */
 }
 
 #posts {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    font-size: 1.5rem;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 h1 {
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     color: darkblue;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
 }
 
 h3 {
-    font-size: 2rem;
-    margin-bottom: .5rem;
+    font-size: 1.4rem;
+    margin-bottom: 0.4rem;
 }
 
 p {
-    font-size: 1.6rem;
-    margin-bottom: 1rem;
-    display: block;
+    font-size: 1.2rem;
+    margin-bottom: 0.6rem;
 }
 
 input[type="text"] {
     border: 1px solid #000;
-    border-radius: 5px;
-    font-size: 1.5rem;
-    padding: 1rem;
+    border-radius: 3px;
+    font-size: 1.2rem;
+    padding: 0.6rem;
 }
 
 .button {
     background-color: darkblue;
-    border: 0;
-    border-radius: 5px;
+    border: none;
+    border-radius: 3px;
     color: #fff;
-    display: block;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     cursor: pointer;
-    margin: 1rem 0 2rem;
-    padding: 1rem 2rem;
+    margin: 0.6rem 0 1.2rem;
+    padding: 0.6rem 1.2rem;
     width: fit-content;
-
 }
 
 .button:hover {
-    opacity: .75;
+    opacity: 0.75;
 }
 
 .posts-item {
     width: calc(100% / 3);
-    padding: 1rem;
+    padding: 0.6rem;
 }
